# financial

./: .gitignore  .replit  Prompt.txt  README.md  pyproject.toml  requirements.txt
sample_data/: sample_transactions.csv
src/portfolio_analyzer/: __init__.py  app.py  cli.py  config.py
src/portfolio_analyzer/core/: __init__.py  holdings.py  performance.py  xirr.py
src/portfolio_analyzer/ui/: __init__.py  formatting.py  state.py  tab_performance.py  tab_portfolio.py  tab_transactions.py
