[project]
name = "portfolio-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.18",
    "scipy>=1.11",
    "streamlit>=1.30",
    "yfinance>=0.2.40",
]

[project.scripts]
portfolio-analyzer = "portfolio_analyzer.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_analyzer"]
